--- a/_config.yml
+++ b/_config.yml
@@ -32,11 +32,14 @@ github_username:  4s0ck3t
 #plugins:
 #  - jekyll-feed
 
-remote_theme: pages-themes/hacker@v0.2.0
-plugins:
-  - jekyll-remote-theme # add this line to the plugins list if you already have one
+  #remote_theme: pages-themes/architect@v0.2.0
+  #plugins:
+  #- jekyll-remote-theme # add this line to the plugins list if you already have one
 
 
+  #theme: jekyll-theme-awesome
+
+theme: jekyll-theme-clean-blog
 
 # Exclude from processing.
 # The following items will not be processed, by default.
