--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ github_username:  4s0ck3t
 
   #theme: jekyll-theme-awesome
 
-theme: jekyll-theme-clean-blog
+remote_theme: jekyll-theme-clean-blog
 
 # Exclude from processing.
 # The following items will not be processed, by default.
