--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,8 @@ github_username:  4s0ck3t
 
   #theme: jekyll-theme-clean-blog
 remote_theme: "mmistakes/minimal-mistakes@4.24.0"
-
+  plugins:
+    -  jekyll-include-cache
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
